Creating Nav Section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noorie Clinic Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav class="total_container nav_container">
+            <div class="nav_logo"><img src="images/Noorie_bg.png" alt="Noorie Clinic Logo"></div>
+            <ul class="nav_link">
+                <li class="link"><a href="#home">Home</a></li>
+                <li class="link"><a href="#services">Services</a></li>
+                <li class="link"><a href="#book">Book Now</a></li>
+                <li class="link"><a href="#doctors">Doctors</a></li>
+                <li class="link"><a href="#blogs">Blogs</a></li>
+                <li class="link"><a href="#about">About</a></li>
+            </ul>
+
+            <button class="button"><a href="#">LogIn</a></button>
+        </nav>
+    </header>
     
 </body>
 </html>
