--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noorie Clinic Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
 </head>
 <body>
     <header>
-        <nav class="total_container nav_container">
-            <div class="nav_logo"><img src="images/Noorie_bg.png" alt="Noorie Clinic Logo"></div>
-            <ul class="nav_link">
+        <div class="total-container nav-container">
+            <div class="nav-logo"><strong>Noorie <span>Clinic</span></strong></div>
+            <ul class="nav-link">
                 <li class="link"><a href="#home">Home</a></li>
                 <li class="link"><a href="#services">Services</a></li>
-                <li class="link"><a href="#book">Book Now</a></li>
                 <li class="link"><a href="#doctors">Doctors</a></li>
                 <li class="link"><a href="#blogs">Blogs</a></li>
                 <li class="link"><a href="#about">About</a></li>
             </ul>
 
-            <button class="button"><a href="#">LogIn</a></button>
-        </nav>
+            <a href="#">
+                <button class="button">Login Now</button>
+            </a>
+            <!-- <button class="button"><a href="#">LogIn</a></button> -->
+        </div>
+
+        <div class="total-container header-container">
+            <div class="header-content">
+                <h1>Providing an Experience Doctor for Your Health</h1>
+                <p>
+                    Welcome to the official website of Noori Clinic, where you will find experienced doctors as well as well-trained and caring nurses. Trust our doctors for your health and book your appointment now.
+                </p>
+                <button class="button"><a href="#">Book Appointment</a></button>
+            </div>
+
+            <div class="header-image">
+                <img src="" alt="">
+            </div>
+        </div>
     </header>
     
 </body>
