Created responsive index page for Doctor Appointment System

--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noorie Clinic Dashboard</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Noorie Clinic Dashboard</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <div class="total-container nav-container">
-            <div class="nav-logo"><strong>Noorie <span>Clinic</span></strong></div>
-            <ul class="nav-link">
-                <li class="link"><a href="#home">Home</a></li>
-                <li class="link"><a href="#services">Services</a></li>
-                <li class="link"><a href="#doctors">Doctors</a></li>
-                <li class="link"><a href="#blogs">Blogs</a></li>
-                <li class="link"><a href="#about">About</a></li>
-            </ul>
+  <header>
+    <nav class="nav-container total-container">
+      <div class="nav-logo"><strong>Noorie <span>Clinic</span></strong></div>
+      <ul class="nav-link">
+        <li class="link"><a href="#home">Home</a></li>
+        <li class="link"><a href="#services">Services</a></li>
+        <li class="link"><a href="#doctors">Doctors</a></li>
+        <li class="link"><a href="#blogs">Blogs</a></li>
+        <li class="link"><a href="#about">About</a></li>
+      </ul>
+      <a href="#" class="login-button">Login</a>
+    </nav>
 
-            <a href="#">
-                <button class="button">Login Now</button>
-            </a>
-            <!-- <button class="button"><a href="#">LogIn</a></button> -->
-        </div>
+    <div class="header-container total-container">
+      <div class="header-content">
+        <h1>Providing an Experienced Doctor for Your Health</h1>
+        <p>
+          Welcome to the official website of Noorie Clinic. Here, you’ll find experienced doctors, well-trained and caring nurses. Trust us for your health and book your appointment now.
+        </p>
+        <a href="#"><button class="button">Book Your Appointment</button></a>
+      </div>
 
-        <div class="total-container header-container">
-            <div class="header-content">
-                <h1>Providing an Experience Doctor for Your Health</h1>
-                <p>
-                    Welcome to the official website of Noori Clinic, where you will find experienced doctors as well as well-trained and caring nurses. Trust our doctors for your health and book your appointment now.
-                </p>
-                <button class="button"><a href="#">Book Appointment</a></button>
-            </div>
-
-            <div class="header-image">
-                <img src="" alt="">
-            </div>
-        </div>
-    </header>
-    
+      <div class="header-image">
+        <img src="images/Doctor.png" alt="Doctor" />
+      </div>
+    </div>
+  </header>
 </body>
 </html>
