Updated index page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Noorie Clinic Dashboard</title>
+  <title>Noorie Clinic</title>
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 </head>
@@ -18,7 +18,7 @@
         <li class="link"><a href="#blogs">Blogs</a></li>
         <li class="link"><a href="#about">About</a></li>
       </ul>
-      <a href="#" class="login-button">Login</a>
+      <a href="Index/login.html" class="login-button">Login</a>
     </nav>
 
     <div class="header-container total-container">
@@ -27,7 +27,7 @@
         <p>
           Welcome to the official website of Noorie Clinic. Here, you’ll find experienced doctors, well-trained and caring nurses. Trust us for your health and book your appointment now.
         </p>
-        <a href="#"><button class="button">Book Your Appointment</button></a>
+        <a href="Index/login.html"><button class="button">Book Your Appointment</button></a>
       </div>
 
       <div class="header-image">
