Created service header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Noorie Clinic</title>
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css">
 </head>
 <body>
   <header>
@@ -35,5 +36,41 @@
       </div>
     </div>
   </header>
+
+  <section class="total-container service-container" id="services">
+    <div class="service-header">
+      <div class="service-header-content">
+        <h2 class="section-header">Our Special Services</h2>
+      </div>
+    </div>
+
+    <div class="service-grid">
+      <div class="service-card">
+        <span><i class="ri-microscope-line"></i></span>
+        <h4>Diagnostics Test</h4>
+        <p>
+          We provide a range of diagnostic tests to assess your health and detect underlying conditions. These tests play a crucial role in early detection, accurate diagnosis, and personalized treatment planning for your health.
+        </p>
+      </div>
+
+      <div class="service-card">
+        <span><i class="ri-mental-health-line"></i></span>
+        <h4>Health Test</h4>
+        <p>
+          We offer a comprehensive range of health tests to assess your well-being, detect potential health issues, and monitor your overall health. These tests serve various purposes, from early disease detection to treatment planning.
+        </p>
+      </div>
+
+      <div class="service-card">
+        <span><i class="ri-hospital-line"></i></span>
+        <h4>Emergency Service</h4>
+        <p>
+          Emergency services are a vital component of healthcare, responding to urgent calls for help 24/7 in nearly every community. At our clinic, we prioritize immediate, unscheduled medical care for patients facing critical situations.
+        </p>
+      </div>
+
+    </div>
+  </section>
+
 </body>
 </html>
