Created doctors container

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css">
 </head>
 <body>
+  <!-- ==========Navigation & Header container========== -->
   <header>
     <nav class="nav-container total-container">
+
       <div class="nav-logo"><strong>Noorie <span>Clinic</span></strong></div>
       <ul class="nav-link">
         <li class="link"><a href="#home">Home</a></li>
@@ -23,6 +25,7 @@
     </nav>
 
     <div class="header-container total-container">
+
       <div class="header-content">
         <h1>Providing an Experienced Doctor for Your Health</h1>
         <p>
@@ -34,10 +37,13 @@
       <div class="header-image">
         <img src="images/Doctor.png" alt="Doctor" />
       </div>
+
     </div>
   </header>
 
+ <!-- ==========Service Container========== -->
   <section class="total-container service-container" id="services">
+
     <div class="service-header">
       <div class="service-header-content">
         <h2 class="section-header">Our Special Services</h2>
@@ -45,6 +51,7 @@
     </div>
 
     <div class="service-grid">
+
       <div class="service-card">
         <span><i class="ri-microscope-line"></i></span>
         <h4>Diagnostics Test</h4>
@@ -70,6 +77,54 @@
       </div>
 
     </div>
+  </section>
+
+  <!-- ==========Doctor Container========== -->
+  <section class="total-container doctors-container" id="doctors">
+
+    <div class="doctors-header">
+
+      <div class="doctors-header-content">
+        <h2 class="section-header">Our Special Doctors</h2>
+        <p>
+          Our specialized doctors bring years of experience and cutting-edge knowledge to the table. Whether it is cardiology, pediatrics, or dermatology, we have got you covered.</p>
+      </div>
+
+      <div class="doctors-nav">
+        <span><i class="ri-arrow-left-line"></i></span>
+        <span><i class="ri-arrow-right-line"></i></span>
+      </div>
+
+    </div>
+    
+    <div class="doctors-grid">
+
+      <div class="doctors-card">
+        <div class="doctors-card-image">
+          <img src="/images/doctor-1.jpg" alt="doctor">
+        </div>
+        <h4>Dr. Athena Kerr</h4>
+        <p>Cardiologist</p>
+      </div>
+
+      <div class="doctors-card">
+        <div class="doctors-card-image">
+          <img src="/images/doctor-2.jpg" alt="doctor">
+        </div>
+        <h4>Dr. Peter Josh</h4>
+        <p>Neurosurgeon</p>
+      </div>
+
+      <div class="doctors-card">
+        <div class="doctors-card-image">
+          <img src="/images/doctor-3.jpg" alt="doctor">
+        </div>
+        <h4>Dr. Martin Burg</h4>
+        <p>Dermatologist</p>
+      </div>
+
+    </div>
+
   </section>
 
 </body>
