Created blogs container

--- a/index.html
+++ b/index.html
@@ -127,5 +127,51 @@
 
   </section>
 
+  <!-- ==========Blogs container========== -->
+  <section class="total-container why-container" id="blogs">
+
+    <div class="why-image">
+      <img src="/images/choose-us.jpg" alt="Doctor img">
+    </div>
+
+    <div class="why-content">
+
+      <h2 class="section-header">Why Choose Us</h2>
+      <p>
+        Our team of specialized doctors brings years of experience and cutting-edge knowledge to every appointment. Whether you need routine check-ups or complex treatments, we have got you covered.
+      </p>
+      
+      <div class="why-grid">
+
+        <span><i class="ri-hand-heart-line"> </i></span>
+
+        <div>
+          <h4>Intensive Care</h4>
+          <p>
+            Our Intensive Care Unit is equipped with advanced technology and staffed by team of professionals.
+          </p>
+        </div>
+
+        <span><i class="ri-truck-line"></i></span>
+
+        <div>
+          <h4>Free Ambulance</h4><p>
+            A compassionate initiative to prioritize your health and well-being without any financial burden.
+          </p>
+        </div>
+
+        <span><i class="ri-hospital-line"></i></span>
+
+        <div>
+          <h4>Medical and Surgical</h4>
+          <p>
+            Our Medical and Surgical services offer advanced healthcare solutions to address medical needs.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
