Update images folder path

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
       <div class="doctors-card">
         <div class="doctors-card-image">
-          <img src="/images/doctor-1.jpg" alt="doctor">
+          <img src="images/doctor-1.jpg" alt="doctor">
         </div>
         <h4>Dr. Athena Kerr</h4>
         <p>Cardiologist</p>
@@ -109,7 +109,7 @@
 
       <div class="doctors-card">
         <div class="doctors-card-image">
-          <img src="/images/doctor-2.jpg" alt="doctor">
+          <img src="images/doctor-2.jpg" alt="doctor">
         </div>
         <h4>Dr. Peter Josh</h4>
         <p>Neurosurgeon</p>
@@ -117,7 +117,7 @@
 
       <div class="doctors-card">
         <div class="doctors-card-image">
-          <img src="/images/doctor-3.jpg" alt="doctor">
+          <img src="images/doctor-3.jpg" alt="doctor">
         </div>
         <h4>Dr. Martin Burg</h4>
         <p>Dermatologist</p>
@@ -131,7 +131,7 @@
   <section class="total-container why-container" id="blogs">
 
     <div class="why-image">
-      <img src="/images/choose-us.jpg" alt="Doctor img">
+      <img src="images/choose-us.jpg" alt="Doctor img">
     </div>
 
     <div class="why-content">
